--- a/config.example.yml
+++ b/config.example.yml
@@ -12,3 +12,4 @@ temp_path: tmp/
 finished_path: finished/
 fetchers_interval: 30 #fetchers run interval
 log_to_file: #bool true or false
+log_file: /var/log/getbox/ #log file location
